Fixed: note panel has too wide drop down and broken localization (#543)
* Fixed dropdown width

* FIxed localization

--- a/app/assets/stylesheets/src/shared/_scaffolds.scss
+++ b/app/assets/stylesheets/src/shared/_scaffolds.scss
@@ -393,6 +393,12 @@ ul.dropdown-menu {
   --bs-dropdown-min-width: 100%;
 }
 
+.note-show {
+  ul.dropdown-menu {
+    --bs-dropdown-min-width: 10rem;
+  }
+}
+
 .error-pages {
   h1 {
     line-height: 3rem;
